# PyMySQL

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.databases.json  .travis.initialize.db.sh  .travis.yml  AGENTS.md  CHANGELOG  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README  README.md  README.rst  build-py3k.sh  codecov.yml  corealated subquery  cursors.py.py3k.patch  django.yaml  docker-compose.yml  example.py  example_pool.py  notes.org  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  runtests.py  setup.cfg  setup.py  setup.py.py3k.patch  sha256_test.py  todo.org  tox.ini  wait_for_it.sh
.cache/v/cache/: lastfailed
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  default-issue-template.md
.github/workflows/: codeql-analysis.yml  django.yaml  lint.yaml  lock.yml  publish.yml  test.yaml  test.yml
.travis/: initializedb.sh
ci/: database.json  docker.json  test_mysql.py
ci/docker-entrypoint-initdb.d/: README  init.sql  mariadb.sql  mysql.sql
cymysql/: __init__.py  __version__.py  charset.pxd  charset.py  charsetx.pyx  connections.py  connectionsx.pyx  converters.py  convertersx.pyx  cursors.py  cursorsx.pyx  err.py  packet.py  packet.pyx  packetx.pyx  readpacket.py  result.py  result.pyx  socketwarapper.py  socketwrapper.py  socketwrapper.pyx  times.py
cymysql/aio/: __init__.py  connections.py  context.py  cursors.py  pool.py  recv.py  result.py  socketwrapper.py
cymysql/constants/: CLIENT.py  CR.py  ER.py  FIELD_TYPE.py  SERVER_STATUS.py
cymysql/tests/: __init__.py  base.py  test_DictCursor.py  test_SSCursor.py  test_async.py  test_basic.py  test_example.py  test_issues.py
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  index.rst
docs/source/modules/: connections.rst  cursors.rst  index.rst
docs/source/user/: CRUD.rst  conversion.rst  development.rst  examples.rst  index.rst  installation.rst  resources.rst
example/: example.py  pool2.py
init/: init.sql
misc/: mysqlproxy.py
pymysql/: __init__.py  _auth.py  _compat.py  _connection_protocol.py  _socketio.py  charset.py  connections.py  converters.py  cursor.py  cursors.py  err.py  exceptions.py  login_path.py  optionfile.py  packet.py  parser.py  parsers.py  pool.py  pools.py  protocol.py  times.py  util.py
pymysql/auth/: sha256_password_plugin.py
pymysql/constants/: CLIENT.py  CLIENT_FLAG.py  COMMAND.py  CR.py  ER.py  FIELD_TYPE.py  SERVER_STATUS.py
pymysql/easyMVC/: __init__.py  dao.py  entity.py  service.py
pymysql/easyMVC/demo/: test.py
pymysql/easyMVC/demo/config/: config.json  config_dict.json
pymysql/tests/: __init__.py  base.py  test_DictCursor.py  test_OrderedDictCursor.py  test_SSCursor.py  test_auth_protocol.py  test_basic.py  test_charset.py  test_connection.py  test_converters.py  test_cursor.py  test_deprecations.py  test_err.py  test_example.py  test_issues.py  test_load_local.py  test_nextset.py  test_optionfile.py  test_pool.py
pymysql/tests/data/: load_local_data.txt  load_local_warn_data.txt
src/: accel.c  accel.c.orig
tests/: test_auth.py  test_del.py  test_load_local_file.py  test_local_infile_only_args.py  test_mariadb_auth.py  test_pool.py
tornado_mysql/: __init__.py  _compat.py  _socketio.py  charset.py  connections.py  cursors.py  err.py  pools.py  util.py
tornado_mysql/constants/: CLIENT.py  COMMAND.py
tornado_mysql/tests/: __init__.py  base.py  test_DictCursor.py  test_SSCursor.py  test_basic.py  test_connection.py  test_example.py  test_issues.py  test_nextset.py
