[project]
name = "PyMySQL"
description = "Pure Python MySQL Driver"
authors = [
    {name = "Inada Naoki", email = "songofacandy@gmail.com"},
    {name = "Yutaka Matsubara", email = "yutaka.matsubara@gmail.com"}
]
dependencies = []

requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
keywords = ["MySQL"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Topic :: Database",
]
dynamic = ["version"]

[project.optional-dependencies]
"rsa" = [
    "cryptography>=46.0.7"
]
"ed25519" = [
    "PyNaCl>=1.6.2"
]

[project.urls]
"Project" = "https://github.com/PyMySQL/PyMySQL"
"Documentation" = "https://pymysql.readthedocs.io/"
"Changelog" = "https://github.com/PyMySQL/PyMySQL/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = false
include = ["pymysql*"]
exclude = ["tests*", "pymysql.tests*"]

[tool.setuptools.dynamic]
version = {attr = "pymysql.VERSION_STRING"}

[tool.ruff]
exclude = [
    "pymysql/tests/thirdparty",
]

[tool.ruff.lint]
ignore = ["E721"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest-cov>=4.0.0",
]
